[package]
name = "hft-trading-system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = { version = "0.1.17" }
futures = { version = "0.3.31" }
async-trait = { version = "0.1.83" }

# Serialization
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }

# Error handling
thiserror = { version = "2.0.8" }

# Logging
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }

# Data structures
indexmap = { version = "2.6.0" }
parking_lot = { version = "0.12.3" }
rust_decimal = { version = "1.36.0", features = ["maths"] }
rust_decimal_macros = { version = "1.29.1" }

# Time handling
chrono = { version = "0.4.39", features = ["serde"] }

# Derive macros
derive_more = { version = "2.0.1", features = [
    "constructor",
    "display",
    "from",
] }

# WebSocket communication
tokio-tungstenite = { version = "0.26.0", features = ["url","rustls-tls-webpki-roots"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }

# Performance utilities
fnv = { version = "1.0.7" }
bytes = { version = "1.5.0" }

# Testing
tokio-test = { version = "0.4.4" }